# NESEmu

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  README.md
.github/workflows/: cmake_windows.yml
src/: apu.cpp  cpu.cpp  global.h  instructions.cpp  instructions.h  main.cpp  opcode_interpreter.cpp  ppu.cpp  ppu.h  romLoader.cpp  romLoader.h  util.cpp
src/CPU/: cpu.cpp  cpu.h  instructions.cpp  instructions.h  opcode_interpreter.cpp
src/PPU/: ppu.cpp  ppu.h
src/RenderWindow/: main_window.cpp  main_window.h
src/mappers/: mapper.cpp  mapper.h  mapper0.cpp  mapper0.h
tests/: Opcodes_with_Cycle_Ranges.csv  find_diff.py  opcodeCompare.py  opcode_compare.py  opcodes_cycles.csv  test_1.py
tools/: compare_logs.py  compare_pc.py  mv_and_run_cycle_checker.sh  opcodeCompare.py  santize_log.py
